--- a/module_00/00_python.ipynb
+++ b/module_00/00_python.ipynb
@@ -19,18 +19,17 @@
    "metadata": {},
    "source": [
     "<b>Computation learning objectives:</b>\n",
-    "- placeholder\n",
-    "\n",
+    "- Learn about Python and the basics of how to install and run it on your computer \n",
     "\n",
     "<b>Geoscience learning objectives:</b>\n",
-    "- placeholder\n",
+    "- Understand the benefits of \"thinking algorithmically\" in the geosciences\n",
     "\n",
     "<b>Real-world context:</b>\n",
-    "- placeholder\n",
-    "\n",
+    "- Many data tasks can be accomplished more quickly and accurately using coding compared to graphical user interfaces (GUIs) like Excel, ArcGIS, etc. \n",
+    "- Python is free, meaning your lab or employer can save money if you know how to accomplish tasks with Python\n",
     "\n",
     "<b>Tips for success:</b>\n",
-    "- placeholder"
+    "- Read this section and ask questions if you're confused!"
    ]
   },
   {
