--- a/module_02/02_matplotlib.ipynb
+++ b/module_02/02_matplotlib.ipynb
@@ -32,13 +32,7 @@
     "\n",
     "<b>Real-world context:</b>\n",
     "- Visualize complex data\n",
-    "- Writing generalizable code so that if your dataset grows, you don't have to start from scratch\n",
-    "\n",
-    "\n",
-    "<b>Tips for success:</b>\n",
-    "- placeholder\n",
-    "- placeholder\n",
-    "- placeholder"
+    "- Writing generalizable code so that if your dataset grows, you don't have to start from scratch"
    ]
   },
   {
