--- a/module_03/03_pandas_intro.ipynb
+++ b/module_03/03_pandas_intro.ipynb
@@ -36,12 +36,7 @@
     "<b>Real-world context:</b>\n",
     "- Many environmental and geoscientific data are collected in tabular format (rows and columns), which each row representing an observation either in time or space.\n",
     "- That data will likley need to be \"cleaned\" (e.g. missing data, in the wrong units), and if the dataset is large, it may be challenging to perform those tasks in Excel\n",
-    "- Getting data into `pandas` DataFrames will help you quickly visualize your data (in the next module!)\n",
-    "\n",
-    "<b>Tips for success:</b>\n",
-    "- placeholder\n",
-    "- placeholder\n",
-    "- placeholder"
+    "- Getting data into `pandas` DataFrames will help you quickly visualize your data (in the next module!)\n"
    ]
   },
   {
