--- a/module_04/04_pandas_plotting.ipynb
+++ b/module_04/04_pandas_plotting.ipynb
@@ -18,12 +18,7 @@
     "\n",
     "\n",
     "<b>Real-world context:</b>\n",
-    "- Tabular environmental and geoscientific data is often plotted as either a time series (with time on the x-axis, often as a line plot) or as a cross-plot (one variable plotted against another, often as points on a scatterplot)\n",
-    "\n",
-    "<b>Tips for success:</b>\n",
-    "- placeholder\n",
-    "- placeholder\n",
-    "- placeholder"
+    "- Tabular environmental and geoscientific data is often plotted as either a time series (with time on the x-axis, often as a line plot) or as a cross-plot (one variable plotted against another, often as points on a scatterplot)"
    ]
   },
   {
