--- a/module_05/05_application.ipynb
+++ b/module_05/05_application.ipynb
@@ -222,8 +222,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "1. Completed `iterating.ipynb`\n",
-        "2. Completed `producing_soil.ipynb`, specifically numerically implementing the soil production function to determine the number of years needed to produce a soil whose thickness does not appreciably change with time.\n",
+        "You will be turning in the completed file `05_application.ipynb`, specifically numerically implementing the soil production function to determine the number of years needed to produce a soil whose thickness does not appreciably change with time.\n",
         "\n",
         "!* <b>BONUS</b> *! For an extra half point, compare your numerical solution of years until steady state with an <i>analytic</i> solution using the same parameters. Use integration!"
       ]
