--- a/module_05/05_iterating.ipynb
+++ b/module_05/05_iterating.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make a list of numbers\n",
     "nums = [1,2,3,4]\n",
     "\n",
+    "# The variable \"number\" can be whatever you want since you are defining it here as\n",
+    "# the thing that \"nums\" is full of \n",
     "for number in nums:\n",
     "    print(number + 1)"
    ]
@@ -50,8 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Let's try a pandas example\n",
     "words = pd.read_csv(\"word_cloud_counts.csv\")\n",
+    "\n",
+    "# Handy way of turning everything in a column into a list\n",
     "word_list = words['Text'].tolist()\n",
+    "\n",
+    "# The syntax using the colon tells Python\n",
+    "# Just print me the first four instances of this list\n",
     "print(word_list[0:4])"
    ]
   },
@@ -154,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here I am using the incredible [`glob`](https://docs.python.org/3/library/glob.html)"
+    "Here I am using the incredible [`glob`](https://docs.python.org/3/library/glob.html) to iteratively look througth a series of (real life!) data from the North Slope of Alaska. They are from six different sites, and some sites have more years' of data than others. "
    ]
   },
   {
@@ -163,10 +172,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pathlib is a powerful package that helps you parse files in your workspace\n",
     "from pathlib import Path\n",
     "\n",
-    "p = Path(\".\\\\upper_kuparuk_data\")\n",
+    "# Make this file path a Path object\n",
+    "p = Path(\"./upper_kuparuk_data\")\n",
     "\n",
+    "# And now iteratively find all the things that match this text format\n",
+    "# The \"*\" is called a wild card - just like in poker, it can be whatever!\n",
     "for file in p.glob('wt*.csv'):\n",
     "    print(file)"
    ]
@@ -193,7 +206,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of opening each file by hand, we can quickly see which years we have data for and which ones we don't:"
+    "Instead of opening each file by hand, we can quickly see which years we have data for and which ones we don't:\n",
+    "\n",
+    "(and if you haven't read about the sweet shortcuts you can take with [`pd.to_datetime()`](https://pandas.pydata.org/docs/reference/api/pandas.to_datetime.html) now is the time!)"
    ]
   },
   {
@@ -325,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "geobasic",
+   "display_name": "bog_ms",
    "language": "python",
    "name": "python3"
   },
@@ -339,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
